# keride

./: Cargo.toml  README.md
src/cesr/: README.md  mod.rs
src/cesr/core/: bexter.rs  saider.rs  serder.rs
src/cesr/core/matter/: mod.rs  tables.rs
src/cesr/crypto/: hash.rs
src/cesr/parside/: README.md  mod.rs
src/cesr/parside/message/: cold_code.rs  custom_payload.rs  message.rs  message_list.rs  parsers.rs
src/cesr/parside/message/groups/: attached_material_quadlets.rs  controller_idx_sigs.rs  first_seen_replay_couples.rs  group.rs  mod.rs  non_trans_receipt_couples.rs  pathed_material_quadlets.rs  sad_path_sig.rs  sad_path_sig_group.rs  seal_source_couples.rs  trans_idx_sig_groups.rs  trans_last_idx_sig_groups.rs  trans_receipt_quadruples.rs  witness_idx_sigs.rs
src/prefexing/: prefixer.rs
wasm/: Cargo.toml
