[package]
name = "keride"
version = "0.1.1"
edition = "2021"
description = "KERI and ACDC implementation in Rust"
license = "Apache-2.0"
keywords = ["keri", "acdc", "cesr", "signify", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cesr", "signify", "prefixing", "pathing", "parsing"]
cesr = []
signify = ["cesr"]
prefixing = ["cesr"]
pathing = ["cesr"]
parsing = ["cesr"]

[dependencies]
anyhow = "~1.0.86"
argon2 = "~0.6.0-pre.0"
base64 = "~0.22.1"
blake2 = "~0.11.0-pre.3"
blake3 = "~1.5.2"
chrono = { version = "~0.4.38", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
indexmap = "~2.2.6"
k256 = "~0.13.3"
lazy_static = "~1.5.0"
num-rational = "~0.4.2"
p256 = "~0.13.2"
rand_core = "~0.6.4"
regex = "~1.10.5"
serde_json = { version = "~1.0.120", features = ["preserve_order"] }
sha2 = "~0.10.8"
sha3 = "~0.10.8"
thiserror = "~1.0.62"
zeroize = { version = "~1.8.1", features = ["derive"] }

[dev-dependencies]
hex-literal = "0.4.1"
hex = "0.4.3"
rstest = "0.21.0"
